syntax = "proto3";

// 패키지 명은 본인의 프로젝트 구조에 맞게 수정하세요.
package com.ticket.portfolio;

// [Java 옵션] 이 설정들이 있어야 자바 파일이 예쁘게 생성됩니다.
option java_multiple_files = true; // 클래스 파일을 각각 분리해서 생성
option java_package = "com.ticket.portfolio"; // 자바 패키지 경로
option java_outer_classname = "TicketProto"; // 전체를 감싸는 클래스명

// ------------------------------------------------------------
// 1. 서비스 정의 (API 명세)
// ------------------------------------------------------------
service TicketService {
  // ① 대기열 토큰 발급 (대기표 뽑기)
  rpc IssueToken (TokenRequest) returns (TokenResponse);

  // ② 예약 가능한 좌석 조회 (내 차례가 되었을 때만 호출 가능)
  rpc GetAvailableSeats (SeatSearchRequest) returns (SeatListResponse);

  // ③ 좌석 예약 요청 (핵심: 동시성 제어 필요)
  rpc ReserveSeat (ReservationRequest) returns (ReservationResponse);
}

// ------------------------------------------------------------
// 2. 메시지 정의 (DTO)
// ------------------------------------------------------------

// --- ① 대기열 관련 메시지 ---
message TokenRequest {
  string user_id = 1;     // 사용자 ID (UUID 등)
  int64 concert_id = 2;   // 공연 ID
}

message TokenResponse {
  string token = 1;       // 발급된 대기열 토큰 (JWT 혹은 UUID)
  int64 wait_position = 2;// 내 앞의 대기 인원 수
  int64 estimated_wait_seconds = 3; // 예상 대기 시간(초)
  bool can_enter = 4;     // 즉시 입장 가능 여부
}

// --- ② 좌석 조회 관련 메시지 ---
message SeatSearchRequest {
  string token = 1;       // [보안] 대기열 토큰 (이게 유효해야 조회 가능)
  int64 concert_id = 2;   // 공연 ID
}

message Seat {
  int64 seat_id = 1;      // 좌석 고유 ID
  int32 seat_number = 2;  // 좌석 번호
  string status = 3;      // 상태 (AVAILABLE, RESERVED, SOLD)
}

message SeatListResponse {
  repeated Seat seats = 1; // 좌석 리스트 (List<Seat>)
}

// --- ③ 예약 관련 메시지 ---
message ReservationRequest {
  string token = 1;       // [보안] 대기열 토큰
  string user_id = 2;     // 사용자 ID
  int64 seat_id = 3;      // 예약하려는 좌석 ID
}

message ReservationResponse {
  bool success = 1;       // 성공 여부 (true/false)
  string message = 2;     // 결과 메시지 ("예약 성공", "이미 선점된 좌석입니다" 등)
  int64 reservation_id = 3; // 예약 완료 시 생성된 주문 번호
}