package com.client.portFolio.client;

import com.ticket.portfolio.*;
import lombok.extern.slf4j.Slf4j;
import net.devh.boot.grpc.client.inject.GrpcClient;
import org.springframework.boot.CommandLineRunner;
import org.springframework.stereotype.Component;

import java.util.Random;
import java.util.concurrent.CountDownLatch;
import java.util.concurrent.ExecutorService;
import java.util.concurrent.Executors;
import java.util.concurrent.atomic.AtomicInteger;

@Slf4j
@Component
public class ScenarioRunner implements CommandLineRunner {

    @GrpcClient("ticket-server")
    private TicketServiceGrpc.TicketServiceBlockingStub ticketStub;

    // í…ŒìŠ¤íŠ¸ ì„¤ì •
    private static final int USER_COUNT = 100000; // 1,000ëª…ì´ ë™ì‹œ ì ‘ì†
    private static final int TOTAL_SEATS = 500;  // ì¤€ë¹„ëœ ì¢Œì„ ìˆ˜

    @Override
    public void run(String... args) throws Exception {
        log.info("========== [ğŸ”¥ ë¶€í•˜ í…ŒìŠ¤íŠ¸ ì‹œì‘] ìœ ì € {}ëª… ë™ì‹œ ì ‘ì† ì‹œë„ ==========", USER_COUNT);

        // [Java 25 í•µì‹¬] ê°€ìƒ ìŠ¤ë ˆë“œ(Virtual Threads) ìƒì„±ê¸°
        // ê¸°ì¡´ ìŠ¤ë ˆë“œí’€ê³¼ ë‹¬ë¦¬, OS ìŠ¤ë ˆë“œë¥¼ ê±°ì˜ ì“°ì§€ ì•Šê³  ë¬´í•œëŒ€ë¡œ ìƒì„± ê°€ëŠ¥í•©ë‹ˆë‹¤.
        ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();

        // ëª¨ë“  ìŠ¤ë ˆë“œê°€ ëë‚  ë•Œê¹Œì§€ ê¸°ë‹¤ë¦¬ê¸° ìœ„í•œ ì¥ì¹˜
        CountDownLatch latch = new CountDownLatch(USER_COUNT);

        // ì„±ê³µ/ì‹¤íŒ¨ ì¹´ìš´í„° (ë™ì‹œì„± ì•ˆì „)
        AtomicInteger successCount = new AtomicInteger(0);
        AtomicInteger failCount = new AtomicInteger(0);

        long startTime = System.currentTimeMillis();

        for (int i = 1; i <= USER_COUNT; i++) {
            final String userId = String.valueOf(i);

            executor.submit(() -> {
                try {
                    // 1. ëœë¤ ì¢Œì„ ì„ íƒ (1~50ë²ˆ ì¢Œì„ ì¤‘ í•˜ë‚˜ë¥¼ ë¬´ì‘ìœ„ë¡œ ê³µëµ)
                    // -> ì—¬ëŸ¬ ì‚¬ëŒì´ ê°™ì€ ì¢Œì„ì„ ë…¸ë¦¬ê²Œ ë˜ì–´ 'ë™ì‹œì„± ì´ìŠˆ'ê°€ ë°œìƒí•¨!
                    long targetSeatId = new Random().nextInt(TOTAL_SEATS) + 1;

                    // 2. ëŒ€ê¸°ì—´ í† í° ë°œê¸‰
                    TokenRequest tokenReq = TokenRequest.newBuilder()
                            .setUserId(userId)
                            .setConcertId(1L)
                            .build();
                    TokenResponse tokenRes = ticketStub.issueToken(tokenReq);

                    if (tokenRes.getCanEnter()) {
                        // 3. ì¢Œì„ ì˜ˆì•½ ì‹œë„
                        ReservationRequest resReq = ReservationRequest.newBuilder()
                                .setToken(tokenRes.getToken())
                                .setUserId(userId)
                                .setSeatId(targetSeatId)
                                .build();

                        ReservationResponse resRes = ticketStub.reserveSeat(resReq);

                        if (resRes.getSuccess()) {
                            successCount.incrementAndGet();
                        } else {
                            failCount.incrementAndGet();
                        }
                    } else {
                        failCount.incrementAndGet(); // ëŒ€ê¸°ì—´ ì§„ì… ì‹¤íŒ¨
                    }

                } catch (Exception e) {
                    failCount.incrementAndGet();
                } finally {
                    latch.countDown(); // ì‘ì—… ëë‚¨ ì•Œë¦¼
                }
            });
        }

        // ëª¨ë“  ìœ ì €ì˜ ì‘ì—…ì´ ëë‚  ë•Œê¹Œì§€ ëŒ€ê¸°
        latch.await();

        long endTime = System.currentTimeMillis();
        long duration = endTime - startTime;

        log.info("========== [ê²°ê³¼ ë¦¬í¬íŠ¸] ==========");
        log.info("ì´ ì†Œìš” ì‹œê°„: {}ms", duration);
        log.info("ì´ ì‹œë„ íšŸìˆ˜: {}", USER_COUNT);
        log.info("âœ… ì˜ˆì•½ ì„±ê³µ: {}", successCount.get());
        log.info("âŒ ì˜ˆì•½ ì‹¤íŒ¨: {}", failCount.get());
        log.info("================================");

        // ê²€ì¦: ì„±ê³µ íšŸìˆ˜ëŠ” ì ˆëŒ€ ì´ ì¢Œì„ ìˆ˜(500)ë¥¼ ë„˜ìœ¼ë©´ ì•ˆ ë¨!
        if (successCount.get() > TOTAL_SEATS) {
            log.error("ğŸš¨ ì¹˜ëª…ì  ì˜¤ë¥˜: ì¤€ë¹„ëœ ì¢Œì„ë³´ë‹¤ ë” ë§ì´ ì˜ˆì•½ë˜ì—ˆìŠµë‹ˆë‹¤! (ë™ì‹œì„± ì œì–´ ì‹¤íŒ¨)");
        } else {
            log.info("ğŸ‘ ê²€ì¦ ì„±ê³µ: ë™ì‹œì„± ì œì–´ê°€ ì™„ë²½í•˜ê²Œ ì‘ë™í–ˆìŠµë‹ˆë‹¤.");
        }

        // í…ŒìŠ¤íŠ¸ ëë‚˜ë©´ ë°”ë¡œ ì¢…ë£Œë˜ì§€ ì•Šê²Œ í•˜ë ¤ë©´ ì•„ë˜ ì£¼ì„ í•´ì œ
        // Thread.sleep(5000);
    }
}
